fix spaces between articles and sections on mobile

--- a/style.css
+++ b/style.css
@@ -3685,6 +3685,22 @@ body {
         width: 400px;
     }
 
+    .day .myths {
+        margin-bottom: 152px;
+    }
+
+    .day .myth-1 {
+        margin-bottom: 96px;
+    }
+
+    .day .myth-2 {
+        margin-bottom: 135px;
+    }
+
+    .day .risks {
+        margin-bottom: 173px;
+    }
+
     .day .risk-1 .bg-image {
         display: block;
         left: 2px;
@@ -3698,6 +3714,10 @@ body {
     .day .rule-1 .article-subtitle_small {
         font-size: 1.4em;
         line-height: 1.2em;
+    }
+
+    .day .risk-2 {
+        margin-bottom: 134px;
     }
 
     .day .risk-2 .circle {
@@ -3717,8 +3737,16 @@ body {
         height: 150px;
     }
 
+    .day .rule-1 {
+        margin-bottom: 50px;
+    }
+
     .day .rule-1 .rectangle {
         right: 20px;
+    }
+
+    .day .rule-2 {
+        margin-bottom: 133px;
     }
 
     .day .rule-2 .rectangle {
@@ -3728,6 +3756,10 @@ body {
         bottom: -50px;
     }
 
+    .day .rule-3 {
+        margin-bottom: 120px;
+    }
+
     .day .rule-4 .rectangle {
         left: 0;
         width: 140px;
@@ -3735,6 +3767,11 @@ body {
 
     .day .rule-4 .bg-image {
         left: 0;
+    }
+
+    .evening .myth-1,
+    .evening .myth-2 {
+        margin-bottom: 150px;
     }
 
     .evening .myth-2-bg .rectangles {
@@ -3751,8 +3788,15 @@ body {
         bottom: -88px;
     }
 
+    .evening .risks {
+        margin-bottom: 60px;
+    }
+
+    .evening .risk-1 {
+        margin-bottom: 100px;
+    }
+
     .evening .risk-1-bg .bg-image {
-        display: block;
         left: 0;
     }
 
@@ -3764,6 +3808,10 @@ body {
     .evening .risk-2 .rectangle {
         left: 0;
         width: 200px;
+    }
+
+    .evening .risk-2 {
+        margin-bottom: 70px;
     }
 
     .evening .risk-3 .circle {
@@ -3782,8 +3830,20 @@ body {
         left: 210px;
     }
 
+    .evening .rule-2 {
+        margin-bottom: 140px;
+    }
+
     .evening .rule-2 .bg-image {
         left: 105px;
+    }
+
+    .evening .rule-3 {
+        margin-bottom: 0;
+    }
+
+    .evening .rule-3 .bg-image {
+        top: 75px;
     }
 
     .evening .rule-4-bg .circle {
